--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Rahul. It uses data from weatherstack and mapbox api.</p>
             <img class="potrait" src="/img/robot.jpg">
         </div>
         {{>footer}}
